Implement metrics endpoint (#167)
* Implement metrics endpoint

* Document functions with JSDocs

* Add energy saved percent and last year usage to metrics

* Uncomment docker config
